Closed Bug 342479 Opened 18 years ago Closed 18 years ago

Compiler warning @ nsFloatCacheList::RemoveAndReturnPrev in nsLineBox.cpp

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: RyanVM, Assigned: RyanVM)

References

()

Details

Attachments

(1 file, 1 obsolete file)

Patch forthcoming
Blocks: 317278
Attached patch Add return fc to the function (obsolete) — Splinter Review
I've verified locally that this fixes it.
Attachment #226735 - Flags: review?(roc)
Attachment #226735 - Attachment description: Add return NS_OK to the function → Add return fc to the function
Attachment #226735 - Flags: review?(roc) → review?
Attachment #226735 - Flags: review? → review?(roc)
Comment on attachment 226735 [details] [diff] [review]
Add return fc to the function

fc is always null here, so just return nsnull directly
Attachment #226735 - Flags: superreview+
Attachment #226735 - Flags: review?(roc)
Attachment #226735 - Flags: review+
Change return fc to return nsnull
Attachment #226735 - Attachment is obsolete: true
Attachment #226921 - Flags: superreview?(roc)
Attachment #226921 - Flags: review?(roc)
Attachment #226921 - Flags: superreview?(roc)
Attachment #226921 - Flags: superreview+
Attachment #226921 - Flags: review?(roc)
Attachment #226921 - Flags: review+
Whiteboard: [needs-checkin]
Whiteboard: [needs-checkin] → [checkin needed]
mozilla/layout/generic/nsLineBox.cpp 	1.111
Status: NEW → RESOLVED
Closed: 18 years ago
Hardware: PC → All
Resolution: --- → FIXED
Whiteboard: [checkin needed]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: