Bug 342479: fix compiler warning @ nsFloatCacheList::RemoveAndReturnPrev in nsLineBox.cpp, patch by Ryan VanderMeulen <ryanvm@gmail.com>, r+sr=roc